updating github id

--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
     <a class="w3-button w3-large w3-teal" href="https://www.linkedin.com/in/rijul-saini/"
       title="Linkedin"><i class="fa fa-linkedin"></i></a>
 
-    <a class="w3-button w3-large w3-teal" href="https://github.com/Rijul5" title="Github"><i
+    <a class="w3-button w3-large w3-teal" href="https://github.com/sainirijul" title="Github"><i
         class="fa fa-github"></i></a>
     <p>Copyrights © 2023 All Rights Reserved by Rijul Saini</p>
   </footer>
