--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </div>
 
       <div class="w3-col m8 w3-padding-small" style="text-align:justify">
-        <h5>I received my Ph.D. degree from the <a href="https://www.mcgill.ca/ece/">Department of Electrical and Computer Engineering (ECE)</a> at <a href="https://www.mcgill.ca/">McGill University</a>. I completed my doctoral studies
+        <h5>I am working as a Data & Applied Scientist at Bombardier Aviation. I received my Ph.D. degree from the <a href="https://www.mcgill.ca/ece/">Department of Electrical and Computer Engineering (ECE)</a> at <a href="https://www.mcgill.ca/">McGill University</a>. I completed my doctoral studies
           under the supervision of <a href="http://www.ece.mcgill.ca/~gmussb1/index.htm">Professor Gunter
             Mussbacher</a>. My doctoral research aims to build a recommendation system for assisting practitioners such as requirements
             engineers and software engineers in quickly prototyping domain models from informal requirements which are expressed in natural language. This recommendation system uses
