updated resume and web content

--- a/index.html
+++ b/index.html
@@ -111,14 +111,27 @@
       </div>
 
       <div class="w3-col m8 w3-padding-small" style="text-align:justify">
-        <h5>I am working as a Data & Applied Scientist at Bombardier Aviation. I received my Ph.D. degree from the <a href="https://www.mcgill.ca/ece/">Department of Electrical and Computer Engineering (ECE)</a> at <a href="https://www.mcgill.ca/">McGill University</a>. I completed my doctoral studies
-          under the supervision of <a href="http://www.ece.mcgill.ca/~gmussb1/index.htm">Professor Gunter
-            Mussbacher</a>. My doctoral research aims to build a recommendation system for assisting practitioners such as requirements
-            engineers and software engineers in quickly prototyping domain models from informal requirements which are expressed in natural language. This recommendation system uses
-            Natural Language Processing and Machine Learning techniques to extract and process domain information. Furthermore, the system constructs queryable trace models in the form of knowledge graphs to explain decisions and
-            facilitate system-user interactions.<br></u></h5>
+        <h5>I am currently working as a Data & Applied Scientist at <a href="https://bombardier.com/en">Bombardier Aerospace</a>. 
+          I obtained my Ph.D. degree from <a href="https://www.mcgill.ca/ece/">McGill University</a>, 
+          where I first joined as a Master's student in 2017 and then fast-tracked into the 
+          Ph.D. program in 2019.<br></h5>
 
-        <h5><br>I joined McGill University as a Master's student in Fall-2017 and then fast-tracked into Ph.D. in Winter-2019. Along with my doctoral studies, I gained industrial experience while working with the National Research Council Canada and Bombardier Aerospace as a student intern. During these internship experiences, I used my skills in Machine Learning, Data Science, and Software Engineering to develop internal tools and perform predictive analytics. Before coming to McGill University, I worked as a software analyst at Accenture (2013 to 2017). I received the degree of Bachelor of Technology (Computer Science and Engineering) in 2013.
+          <h5>During my doctoral studies, I was mentored by Professor 
+            <a href="http://www.ece.mcgill.ca/~gmussb1/index.htm">Gunter Mussbacher</a>, and my research 
+              focused on developing a recommendation system that assists practitioners such as 
+              requirements engineers and software engineers in quickly creating domain models from 
+              informal requirements expressed in natural language. This system uses Natural Language 
+              Processing and Machine Learning techniques to extract and process domain information, and 
+              it builds queryable trace models in the form of knowledge graphs to explain decisions and 
+              facilitate system-user interactions.<br></h5>
+
+          <h5>In addition to my academic pursuits, I gained valuable industry experience while interning 
+            at the <a href="https://nrc.canada.ca/en">National Research Council Canada</a> and 
+            <a href="https://bombardier.com/en">Bombardier Aerospace</a>. During these internships, I 
+            applied my skills in Machine Learning, Data Science, and Software Engineering to develop tools 
+            for predictive analytics. Before joining McGill University, I worked as a software analyst at 
+            Accenture from 2013 to 2017. I earned a Bachelor of Technology degree in Computer Science and 
+            Engineering in 2013.<br></h5>
 
       </div>
     </div>
@@ -169,7 +182,7 @@
       <div class="w3-col m12 w3-padding-small">
         <h5>
           <ul class="b">
-            <li> Invited Reviewer for the Science of Computer Programming Journal, February 2023</li>
+            <li>Invited Reviewer for the Science of Computer Programming Journal, February 2023</li>
             <li>General Co-Chair for the 12th International Model-Driven Requirements Engineering <a href="http://www.modre2022.ece.mcgill.ca/index.htm">(MoDRE)</a> Workshop at <a href="https://conf.researchr.org/home/RE-2022">RE'22</a></li>
             <li>Program Committee Member for Tools and Demonstrations track in 25th International Conference on Model Driven Engineering Languages and Systems <a href="https://conf.researchr.org/home/models-2022">(MODELS'22)</a></li>
             <li>Program Committee Member of <a href="https://mde-intelligence.github.io/">MDE Intelligence Workshop</a> at MODELS'21</li>
@@ -519,7 +532,9 @@
     <h3 class="w3-center"><br><br><b>Work Experience</b></h3>
     <div class="tab">
       <button class="tablinks" onclick="t_openTab(event, 't_all')">All</button>
-      <button class="tablinks" onclick="t_openTab(event, 't_2022')" id="t_defaultOpen">2022</button>
+      <button class="tablinks" onclick="t_openTab(event, 't_2024')" id="t_defaultOpen">2024</button>
+      <button class="tablinks" onclick="t_openTab(event, 't_2023')">2023</button>
+      <button class="tablinks" onclick="t_openTab(event, 't_2022')">2022</button>
       <button class="tablinks" onclick="t_openTab(event, 't_2021')">2021</button>
       <button class="tablinks" onclick="t_openTab(event, 't_2020')">2020</button>
       <button class="tablinks" onclick="t_openTab(event, 't_2019')">2019</button>
@@ -530,20 +545,28 @@
     <div id="t_all" class="t_tabcontent">
       <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
       <ul type="b">
-        <h4><br><u>Student Intern at National Research Council Canada (Sep 2022 - Current)</u></h4>
-        <li>Building a semi-automated pipeline for processing and labeling non-trivial image datasets in the automotive industry.
+        <h4><br><u>Data and Applied Scientist at Bombardier Aerospace (Mar 2023 - Current)</u></h4>
+        <li>Leading data science team to steer ML-based engine on Azure to provide live recommendations to customers for aircraft parts.</li>
+        <li>Developed a high performance computing tool with a graphical user interface (DataProbe) using Python to enable data analysis.</li>
+        <li>DataProbe saves more than 2 man hours in a day - received an award in Recognition and Mobilization Program, 2023.</li>
+        <li>Developing multivariate variance-based ML solution (PMx) for anomaly detection using time-series data of aircraft sensors.</li>
+        <li>PMx aims to increase the operational efficiency of aircraft and minimize return-to-service times through data-driven decisions.</li>
+
+
+        <h4><br><u>Student Intern at National Research Council Canada (Sep 2022 - Dec 2022)</u></h4>
+        <li>Conducted research for applying deep learning techniques to solve the problem of defect localization (authored NRC publication).
         </li>
-        <li>Constructing and training Convolutional Neural Networks in TensorFlow for identifying defects in vehicles.
+        <li>Developed YOLO and Faster R-CNN models in PyTorch for classifying parts in vehicles (mAP > 0.90).
         </li>
    
 
         <h4><br><u>Student Intern at Bombardier Aerospace (Jan 2021 - Sep 2022)</u></h4>
-        <li>Led an initiative to enable predictive analytics where I built a pipeline using Scikit-Learn to process 3D data
-          and used classical Machine Learning models to predict aero coefficients.
+        <li>Led an initiative to enable predictive analytics where I built a pipeline using Scikit-Learn to process 3D data and predict aero
+          coefficients using classical Machine Learning models (>95% accuracy).
         </li>
-        <li>Solved a business problem of optimizing conceptual designs of aircraft using optimization algorithms.
+        <li>Developed optimization algorithms and applied them to optimize conceptual designs of aircraft.
         </li>
-        <li>Designed the architecture and built a prototypical tool with microservices using Django and React.
+        <li>Designed microservices-based architecture and built a graphical user interface using Django and React.
         </li>
 
 
@@ -589,35 +612,56 @@
         </li>
 
         <h4><br><u>Software Analyst (Dec 2013 - May 2017)</u></h4>
-        <li>Provided consultancy in the module of SAP Human Resources to a multinational energy conglomerate.</a>
+        <li>Helped Portal and Finance consultants to solve critical issues using using ABAP programming.</a>
         </li>
-        <li>Helped Portal and Finance consultants to solve critical issues using the ABAP debugging technique.</a>
+        <li>Developed payroll interfaces that reduced the problem tickets to one-third.</a>
         </li>
-        <li>Enhanced payroll interfaces to reduce associated problem tickets to one-third</a>
-        </li>
-
-
 
       </ol>
     </div>
 
+    <div id="t_2024" class="t_tabcontent">
+      <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
+      <ul type="b">
+        <h4><br><u>Data and Applied Scientist at Bombardier Aerospace (Mar 2023 - Current)</u></h4>
+        <li>Leading data science team to steer ML-based engine on Azure to provide live recommendations to customers for aircraft parts.</li>
+        <li>Developed a high performance computing tool with a graphical user interface (DataProbe) using Python to enable data analysis.</li>
+        <li>DataProbe saves more than 2 man hours in a day - received an award in Recognition and Mobilization Program, 2023.</li>
+        <li>Developing multivariate variance-based ML solution (PMx) for anomaly detection using time-series data of aircraft sensors.</li>
+        <li>PMx aims to increase the operational efficiency of aircraft and minimize return-to-service times through data-driven decisions.</li>
+    </div>
+
+
+    <div id="t_2023" class="t_tabcontent">
+      <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
+      <ul type="b">
+        <h4><br><u>Data and Applied Scientist at Bombardier Aerospace (Mar 2023 - Current)</u></h4>
+        <li>Leading data science team to steer ML-based engine on Azure to provide live recommendations to customers for aircraft parts.</li>
+        <li>Developed a high performance computing tool with a graphical user interface (DataProbe) using Python to enable data analysis.</li>
+        <li>DataProbe saves more than 2 man hours in a day - received an award in Recognition and Mobilization Program, 2023.</li>
+        <li>Developing multivariate variance-based ML solution (PMx) for anomaly detection using time-series data of aircraft sensors.</li>
+        <li>PMx aims to increase the operational efficiency of aircraft and minimize return-to-service times through data-driven decisions.</li>
+    </div>
+
+
+
     <div id="t_2022" class="t_tabcontent">
       <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
       <ul type="b">
-        <h4><br><u>Student Intern at National Research Council Canada (Sep 2022 - Current)</u></h4>
-        <li>Building a semi-automated pipeline for processing and labeling non-trivial image datasets in the automotive industry.
+        <h4><br><u>Student Intern at National Research Council Canada (Sep 2022 - Dec 2022)</u></h4>
+        <li>Conducted research for applying deep learning techniques to solve the problem of defect localization (authored NRC publication).
         </li>
-        <li>Constructing and training Convolutional Neural Networks in TensorFlow for identifying defects in vehicles.
+        <li>Developed YOLO and Faster R-CNN models in PyTorch for classifying parts in vehicles (mAP > 0.90).
         </li>
    
 
         <h4><br><u>Student Intern at Bombardier Aerospace (Jan 2021 - Sep 2022)</u></h4>
-        <li>Led an initiative to enable predictive analytics where I built a pipeline using Scikit-Learn to process 3D data
-          and used classical Machine Learning models to predict aero coefficients.
+        <li>Led an initiative to enable predictive analytics where I built a pipeline using Scikit-Learn to process 3D data and predict aero
+          coefficients using classical Machine Learning models (>95% accuracy).
         </li>
-        <li>Solved a business problem of optimizing conceptual designs of aircraft using optimization algorithms.
+        <li>Developed optimization algorithms and applied them to optimize conceptual designs of aircraft.
         </li>
-        <li>Designed the architecture and built a prototypical tool with microservices using Django and React.
+        <li>Designed microservices-based architecture and built a graphical user interface using Django and React.
         </li>
 
     </div>
@@ -625,13 +669,13 @@
     <div id="t_2021" class="t_tabcontent">
       <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
       <ul type="b">
-        <h4><br><u>Student Intern (Software Engineering and Machine Learning) at Bombardier Aerospace (Jan 2021 - Sep 2022)</u></h4>
-        <li>Led an initiative to enable predictive analytics where I built a pipeline using Scikit-Learn to process 3D data
-          and used classical Machine Learning models to predict aero coefficients.
+        <h4><br><u>Student Intern at Bombardier Aerospace (Jan 2021 - Sep 2022)</u></h4>
+        <li>Led an initiative to enable predictive analytics where I built a pipeline using Scikit-Learn to process 3D data and predict aero
+          coefficients using classical Machine Learning models (>95% accuracy).
         </li>
-        <li>Solved a business problem of optimizing conceptual designs of aircraft using optimization algorithms.
+        <li>Developed optimization algorithms and applied them to optimize conceptual designs of aircraft.
         </li>
-        <li>Designed the architecture and built a prototypical tool with microservices using Django and React.
+        <li>Designed microservices-based architecture and built a graphical user interface using Django and React.
         </li>
 
 
@@ -702,12 +746,11 @@
       <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
       <ul type="b">
         <h4><br><u>Software Analyst (Dec 2013 - May 2017)</u></h4>
-        <li>Provided consultancy in the module of SAP Human Resources to a multinational energy conglomerate.</a>
+        <li>Helped Portal and Finance consultants to solve critical issues using using ABAP programming.</a>
         </li>
-        <li>Helped Portal and Finance consultants to solve critical issues using the ABAP debugging technique.</a>
+        <li>Developed payroll interfaces that reduced the problem tickets to one-third.</a>
         </li>
-        <li>Enhanced payroll interfaces to reduce associated problem tickets to one-third</a>
-        </li>
+
       </ul>
     </div>
 
@@ -839,7 +882,7 @@
 
     <a class="w3-button w3-large w3-teal" href="https://github.com/sainirijul" title="Github"><i
         class="fa fa-github"></i></a>
-    <p>Copyrights © 2023 All Rights Reserved by Rijul Saini</p>
+    <p>Copyrights © 2024 All Rights Reserved by Rijul Saini</p>
   </footer>
 
   <script src="script/myScript.js"></script>
